[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18"
solana-client = "1.18"
spl-token = "4.0"
spl-associated-token-account = "3.0"
bs58 = "0.5"
base64 = "0.21"
rand = "0.8"
